updated todo for api swagger post
